feature: displaying two apps commits using segmented control

--- a/RecentCommits/RecentCommits/Base.lproj/Main.storyboard
+++ b/RecentCommits/RecentCommits/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RecentCommitsViewController" customModule="RecentCommits" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VbG-Of-Nqq">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VbG-Of-Nqq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -24,6 +24,9 @@
                                 <segment title="Second"/>
                             </segments>
                             <color key="selectedSegmentTintColor" name="AccentColor"/>
+                            <connections>
+                                <action selector="valueChangedForSegment:" destination="BYZ-38-t0r" eventType="valueChanged" id="inl-DQ-fL0"/>
+                            </connections>
                         </segmentedControl>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="RecentCommitsTableViewCell" textLabel="I6j-PL-3Pp" detailTextLabel="gEJ-M5-Z85" style="IBUITableViewCellStyleSubtitle" id="M7z-Oa-Z7m">
